alterações na forma do botão da aula 2

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,25 +12,27 @@
       </div>
 
       <div class="linha">
-        <div class="tecla">
-          <span class="operacao">C<!-- &#10006; --></span>
-        </div>
+        <tecla valor = "C"></tecla>
       </div>
 
       <div class="linha">
-        <div class="tecla">
+        <!-- <div class="tecla">
           <span class="conteudoTecla">7</span>
-        </div>
-        <div class="tecla">
+        </div> -->
+        <tecla valor="7"></tecla>
+        <!-- <div class="tecla">
           <span class="conteudoTecla">8</span>
-        </div>
-        <div class="tecla">
+        </div> -->
+        <tecla valor="9"></tecla>
+        <!-- <div class="tecla">
           <span class="conteudoTecla">9</span>
-        </div>
+        </div> -->
+        <tecla valor="9"></tecla>
 
-        <div class="tecla">
+        <!-- <div class="tecla">
           <span class="operacao">&divide;</span>
-        </div>
+        </div> -->
+        <tecla valor="&divide;"></tecla>
       </div>
 
       <div class="linha">
@@ -44,9 +46,10 @@
           <span class="conteudoTecla">6</span>
         </div>
 
-        <div class="tecla">
+        <!-- <div class="tecla">
           <span class="operacao">&times;</span>
-        </div>
+        </div> -->
+        <tecla valor="&times;"></tecla>
       </div>
 
       <div class="linha">
@@ -60,22 +63,25 @@
           <span class="conteudoTecla">3</span>
         </div>
 
-        <div class="tecla">
+        <!-- <div class="tecla">
           <span class="operacao">&#43;</span>
-        </div>
+        </div> -->
+        <tecla valor="&#43;"></tecla>
       </div>
 
       <div class="linha">
         <div class="tecla">
           <span class="conteudoTecla">0</span>
         </div>
-        <div class="tecla">
+        <!-- <div class="tecla">
           <span class="operacao">&#61;</span>
-        </div>
+        </div> -->
+        <tecla valor="&#61;"></tecla>
 
-        <div class="tecla">
+        <!-- <div class="tecla">
           <span class="operacao">&minus;</span>
-        </div>
+        </div> -->
+        <tecla valor="&minus;"></tecla>
       </div>
 
     </div>
